--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-script": "^2.0.5",
     "react-scripts": "5.0.1",
     "style-components": "^0.1.0",
     "styled-components": "^6.1.11",
